bynkc/tests/fixtures/positive/62_uses_chain/src/c/main.karn
commons c

uses b

type Leaf = {
  inner: Mid,
}
