bynkc/tests/fixtures/negative/40_record_recursive_field/input.karn
commons test {
  type Node = { value: Int, next: Node }
}
